tests/negative/test_cn_asgn_cn_data_member.orb
data Foo {
    i32 x;
}

fnc makeFoo() Foo {
    let Foo f;
    ret f;
}

fnc main() {
    let Foo cn f = makeFoo();
    f.x = 1;
}